# telegram-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/superpowers/plans/: 2026-04-19-docker-support.md  2026-04-19-telegram-assistant.md
docs/superpowers/specs/: 2026-04-19-docker-support-design.md  2026-04-19-telegram-assistant-design.md
src/telegram_assistant/: __main__.py  app.py  config.py  event_bus.py  events.py  llm.py  loop_protection.py  markers.py  module.py  module_loader.py  state.py  telegram_client.py  telethon_client.py
src/telegram_assistant/modules/correcting/: module.py
src/telegram_assistant/modules/drafting/: enricher.py  module.py  openai_drafter.py  pipeline.py
src/telegram_assistant/modules/media_reply/: backends.py  module.py
tests/: conftest.py
tests/fakes/: llm.py  telegram.py
tests/integration/: test_auto_toggle_flow.py  test_correcting_flow.py  test_cross_module.py  test_drafting_flow.py  test_media_reply_flow.py
tests/unit/: test_config.py  test_event_bus.py  test_llm.py  test_loop_protection.py  test_markers.py  test_module_loader.py  test_state.py
tests/unit/modules/correcting/: test_module.py
tests/unit/modules/drafting/: test_enricher.py  test_module.py  test_openai_drafter.py  test_pipeline.py
tests/unit/modules/media_reply/: test_backends.py  test_module.py
