[project]
name = "telegram-assistant"
version = "0.1.0"
description = "Modular Telegram userbot with pluggable features."
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.34",
    "pydantic-ai>=0.0.14",
    "aiohttp>=3.9",
    "watchfiles>=0.22",
    "tomli-w>=1.0",
    "yt-dlp>=2024.8.0",
]

[project.scripts]
telegram-assistant = "telegram_assistant.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7.6",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
